# Digital-AV

./: README.md
avx/: AV-License.txt  AV-Verse.ix1  Procfile  av-software.html  avx+av-TEST.html  avx+av.html  avx-launch.sh  avx.go  avx.html  downloads.html  go.mod  history.txt  index.html  news.html  side-by-side.css  sitemap.xml
avx/2011/: AVBible.2011  AVEnglish.2011
avx/_Godeps/: Godeps.json
avx/css/: AV-Stylesheet.css
avx/fivebitencoding/: fivebitencoding.go  go.mod
avx/xform/: avx.js  index.html  kjv.js  side-by-side.css  side-by-side.js
legacy/2018/: AV-Addendum.bom  AV-Book.IXI  AV-Inventory.bom  AV-Writ.DX2  AVX-Lexicon.DB  Digital-AV.docx  Part-of-Speech-for-Digital-AV.docx  avtext.go  avx.go  ~$gital-AV.docx
omega/: AV-Lexicon-Updates.yml  AV-Lexicon-test.yml  AVX-Omega-3911.md5  AVX-Omega-3911.txt  AVX-Omega-4219.md5  AVX-Omega-4219.txt  AVX-Omega-4220.md5  AVX-Omega-4220.txt  AVX-Omega-5104.txt  AVX-Omega.md5  AVX-Omega.txt  Digital-AV-Ω32.docx  Digital-AV-Ω35.docx  Digital-AV-Ω39.docx  Digital-AV-Ω42.docx  Digital-AV-Ω51.docx  README.md
omega/Generator/: Generator.csproj  HashMapper.cs  Manager.cs  OmegaGenerator.sln  TableOfContents.cs  YamlLexicon.cs
omega/data/: Cargo.toml
omega/data/src/: lib.rs
previous/2018/: AV-Inventory.bom  AV-Stylesheet.css  AV-Writ.DX2  AVX-Lemma.VLT  AVX-Lexicon.VLT  AVZ-Lexicon.VLT  Digital-AV.docx
xr-series/: AV-Book.ascii  AV-Chapter.ascii  AV-Inventory.bom  AV-License.html  AV-PartOfSpeech.dx3  AV-PartOfSpeech.xlsx  AV-Verse.ascii  AV-WordClass.ascii  Digital-AV.docx  Part-of-Speech-for-Digital-AV.docx  SDK-POS-WordClass-Summary.csv
xr-series/SDK/: AV-PartOfSpeech.csv  a-acp.txt  av-dc.txt  av-dx.txt  av-j.txt  av-jn.txt  av-js.txt  av-x.txt  c-crq.txt  ccx.txt  cs.txt  dg.txt  dt.txt  dx.txt  fw-la.txt  j-jn.txt  j-u.txt  j-vvg.txt  j-vvnu.txt  j.txt  jc-jn.txt  jc.txt  js-jn.txt  n-jn.txt  n-vvg.txt  n1-an.txt  (+53 more)
z-series/: AV-Book-Z14.ascii  AV-Book-Z31.ix  AV-Book.ascii  AV-Book.ix  AV-Book.ix2  AV-Book.ix8  AV-Chapter-10.ix  AV-Chapter.ix  AV-Chapter.ix2  AV-Inventory-Z31.bom  AV-Inventory-Z31.md5  AV-Inventory-Z32.bom  AV-Inventory-Z32.md5  AV-Inventory.bom  AV-Lemma-OOV.ascii  AV-Lemma-OOV.dxi  AV-Lemma.ascii  AV-Lemma.dxi  AV-Lexicon-Z14.ascii  AV-Lexicon-Z14.dxi  AV-Lexicon.ascii  AV-Lexicon.dxi  AV-License.html  AV-License.txt  AV-Names.ascii  AV-Names.dxi  AV-PartOfSpeech.ascii  AV-PartOfSpeech.csv  AV-PartOfSpeech.dx3  AV-Verse.ascii  AV-WordClass.ascii  AV-WordClass.dxi  AV-Writ-32.dx  AV-Writ.dx1  AVX-Lexicon.ascii  AVX-Lexicon.dxi  Digital-AV-Z31.docx  Digital-AV-Z32.docx  Digital-AV-Ω32.docx  Digital-AV.docx  (+5 more)
z-series/foundations/cpp/: CMakeLists.txt  avxgen.h  avxlib.cpp  book_index.c  book_index.cpp  book_index.h  chapter_index.c  chapter_index.cpp  chapter_index.h  dllmain.cpp  framework.h  lemmata.c  lemmata.cpp  lemmata.h  lemmata_oov.c  lemmata_oov.cpp  lemmata_oov.h  lexicon.c  lexicon.cpp  lexicon.h  names.c  names.cpp  names.h  verse_index.c  verse_index.cpp  verse_index.h  word_classes.c  word_classes.cpp  word_classes.h  written.cpp  written.h
z-series/foundations/cpp/written/: written_01.cpp  written_02.cpp  written_03.cpp  written_04.cpp  written_05.cpp  written_06.cpp  written_07.cpp  written_08.cpp  written_09.cpp  written_10.cpp  written_11.cpp  written_12.cpp  written_13.cpp  written_14.cpp  written_15.cpp  written_16.cpp  written_17.cpp  written_18.cpp  written_19.cpp  written_20.cpp  written_21.cpp  written_22.cpp  written_23.cpp  written_24.cpp  written_25.cpp  written_26.cpp  written_27.cpp  written_28.cpp  written_29.cpp  written_30.cpp  written_31.cpp  written_32.cpp  written_33.cpp  written_34.cpp  written_35.cpp  written_36.cpp  written_37.cpp  written_38.cpp  written_39.cpp  written_40.cpp  (+27 more)
(+469 files in other folders)
